--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "lucide": "^0.545.0",
     "lucide-react": "^0.545.0",
+    "ms": "^2.1.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/ms": "^2.1.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
